# docs/openapi/pn-timeline-service-private.yaml
@@ -434,14 +434,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  url:
-                    type: string
-                    description: URL dell'AAR
-                  numberOfPages:
-                    type: integer
-                    description: Numero di pagine dell'AAR
+                $ref: '#/components/schemas/AarResponse'
         '404':
           description: Elemento di timeline di tipo AAR_GENERATION non trovato
   /timeline-service-private/timelines/{iun}/cancelled:
@@ -452,7 +445,7 @@ paths:
         Se non trovato, restituisce 404.
       tags:
         - timeline-controller
-      operationId: getNotificationCancelled
+      operationId: getCancellationRequest
       parameters:
         - name: iun
           in: path
@@ -465,12 +458,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  timestamp:
-                    type: string
-                    format: date-time
-                    description: Timestamp della richiesta di cancellazione
+                $ref: '#/components/schemas/CancellationRequestResponse'
         '404':
           description: Elemento NOTIFICATION_CANCELLATION_REQUEST non trovato
   /timeline-service-private/timelines/{iun}/refused:
@@ -481,7 +469,7 @@ paths:
         Se non trovato, restituisce 404.
       tags:
         - timeline-controller
-      operationId: getNotificationRefused
+      operationId: getRequestRefused
       parameters:
         - name: iun
           in: path
@@ -494,25 +482,9 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  refusedStatus:
-                    type: string
-                    description: Stato del rifiuto
-                  errors:
-                    type: array
-                    items:
-                      type: string
-                    description: Elenco degli errori che hanno portato al rifiuto
-                  notificationCost:
-                    type: number
-                    format: double
-                    description: Costo della notifica
-                  numberOfRecipients:
-                    type: integer
-                    description: Numero destinatari
+                $ref: '#/components/schemas/RequestRefusedResponse'
         '404':
-          description: Elemento NOTIFICATION_REFUSED non trovato
+          description: Elemento REQUEST_REFUSED non trovato
 
 components:
   schemas:
@@ -638,4 +610,37 @@ components:
           description: Eventi avvenuti nello stato
           items:
             $ref: './schemas-pn-timeline-service.yaml#/components/schemas/TimelineElement'
-
+    AarResponse:
+      type: object
+      properties:
+        url:
+          type: string
+          description: URL dell'AAR
+        numberOfPages:
+          type: integer
+          description: Numero di pagine dell'AAR
+    CancellationRequestResponse:
+      type: object
+      properties:
+        timestamp:
+          type: string
+          format: date-time
+          description: Timestamp della richiesta di cancellazione
+    RequestRefusedResponse:
+      type: object
+      properties:
+        refusedStatus:
+          type: string
+          description: Stato del rifiuto
+        errors:
+          type: array
+          items:
+            type: string
+          description: Elenco degli errori che hanno portato al rifiuto
+        notificationCost:
+          type: number
+          format: double
+          description: Costo della notifica
+        numberOfRecipients:
+          type: integer
+          description: Numero destinatari
